# -----------------------------------------------------------------------------
# LibYML - A safe and efficient Rust library for YAML data manipulation.
# -----------------------------------------------------------------------------

[package]
# Metadata about the package
name = "libyml"
version = "0.0.6"
authors = ["LibYML Contributors"]
edition = "2021"
rust-version = "1.58.0"
license = "MIT"
description = "A safe and efficient Rust library for parsing, emitting, and manipulating YAML data."
homepage = "https://libyml.com"
documentation = "https://docs.rs/libyml"
repository = "https://github.com/sebastienrousseau/libyml"
readme = "README.md"
categories = ["encoding", "parser-implementations", "no-std"]
keywords = ["yaml", "serde", "serialization"]
exclude = ["/.git/*", "/.github/*", "/.gitignore", "/.vscode/*"]

# Specify which files to include in the package
include = [
    "/CONTRIBUTING.md",
    "/LICENSE-MIT",
    "/benches/**",
    "/build.rs",
    "/Cargo.toml",
    "/examples/**",
    "/README.md",
    "/src/**",
    "/tests/**",
]

# -----------------------------------------------------------------------------
# Library Information
# -----------------------------------------------------------------------------

[lib]
name = "libyml"
path = "src/lib.rs"
crate-type = ["lib"]
doc-scrape-examples = false

# -----------------------------------------------------------------------------
# Features
# -----------------------------------------------------------------------------

[features]
default = [] # No default features
std = [] # Feature for standard library
test-utils = [] # Feature for test utilities

# -----------------------------------------------------------------------------
# Dependencies
# -----------------------------------------------------------------------------

[dependencies]
anyhow = "1.0.95" # Rust library for reporting multiple error types through a single type.

[build-dependencies]
version_check = "0.9.5" # Check the Rust version used to compile the package.

[dev-dependencies]
pretty_assertions = "1.4.1" # Pretty assertions for tests.
libyml-test-suite = { path = "tests/data" } # Local dependency for test suite.

# -----------------------------------------------------------------------------
# Documentation Configuration
# -----------------------------------------------------------------------------

[package.metadata.docs.rs]
all-features = true     # Build documentation with all features enabled
rustdoc-args = [
    "--generate-link-to-definition",
    "--cfg", "docsrs",
    "--document-private-items",
    "--display-warnings",
]
targets = ["x86_64-unknown-linux-gnu"]    # Default target platform for the docs

# -----------------------------------------------------------------------------
# Linting Configuration
# -----------------------------------------------------------------------------

[lints.rust]
## Warn
missing_copy_implementations = "warn"
missing_docs = "warn"
unstable_features = "warn"
unused_extern_crates = "warn"

## Allow
bare_trait_objects = "allow"
elided_lifetimes_in_paths = "allow"
non_camel_case_types = "allow"
non_upper_case_globals = "allow"
trivial_bounds = "allow"
unsafe_code = "allow"

## Forbid
missing_debug_implementations = "forbid"
non_ascii_idents = "forbid"
unreachable_pub = "forbid"

## Deny
dead_code = "deny"
deprecated_in_future = "deny"
ellipsis_inclusive_range_patterns = "deny"
explicit_outlives_requirements = "deny"
future_incompatible = { level = "deny", priority = -1 }
keyword_idents = { level = "deny", priority = -1 }
macro_use_extern_crate = "deny"
meta_variable_misuse = "deny"
missing_fragment_specifier = "deny"
noop_method_call = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2021_compatibility = { level = "deny", priority = -1 }
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused = { level = "deny", priority = -1 }
unused_features = "deny"
unused_import_braces = "deny"
unused_labels = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"
variant_size_differences = "deny"

# -----------------------------------------------------------------------------
# Clippy Configuration
# -----------------------------------------------------------------------------

[package.metadata.clippy]
warn-lints = [
    "clippy::all",
    "clippy::pedantic",
    "clippy::cargo",
    "clippy::nursery",
]

# -----------------------------------------------------------------------------
# Profiles
# -----------------------------------------------------------------------------

[profile.dev]
codegen-units = 256                         # Fast compilation for development
debug = true                                # Enable debugging symbols
incremental = true                          # Incremental compilation
opt-level = 0                               # No optimizations in development

[profile.release]
codegen-units = 1                           # Optimized for performance
debug = false                               # Disable debug symbols
incremental = false                         # Disable incremental compilation
lto = true                                  # Link-time optimization
opt-level = "s"                             # Optimize for size

[profile.test]
codegen-units = 256                         # Fast compilation for testing
debug = true                                # Enable debugging symbols
