[package]
authors = ["LibYML Contributors"]
categories = ["encoding", "parser-implementations", "no-std"]
description = """
DEPRECATED — `libyml` is unmaintained. This release is a thin compatibility shim that forwards every call to `unsafe-libyaml` (the upstream C-libyaml translation `libyml` was originally forked from). Please migrate to `unsafe-libyaml`, `yaml-rust2`, or `noyalib`.
"""
documentation = "https://docs.rs/libyml/"
edition = "2021"
homepage = "https://github.com/sebastienrousseau/libyml"
keywords = ["yaml", "serde", "deprecated", "noyalib", "libyaml"]
license = "MIT OR Apache-2.0"
name = "libyml"
readme = "README.md"
repository = "https://github.com/sebastienrousseau/libyml"
# Matches `unsafe-libyaml`'s MSRV. The previous releases compiled on
# 1.56 too; the backend keeps that floor.
rust-version = "1.56.0"
version = "0.0.6"
include = [
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/MIGRATION.md",
    "/README.md",
    "/examples/**",
    "/src/**",
    "/tests/**",
]

[dependencies]
# `unsafe-libyaml` is the actively-maintained C-libyaml Rust port
# that this shim forwards every call to. `libyml` was originally
# forked from it; the public surface is name-for-name compatible
# once the historical PascalCase type aliases are restored — which
# this crate does, so existing call sites compile unchanged.
unsafe-libyaml = "0.2.11"

[dev-dependencies]
# No extra test dependencies — the shim's smoke tests use only the
# re-exported surface.

[features]
default = []

[lib]
name = "libyml"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = "symbols"
