[package]
name = "libyml-fuzz"
version = "0.0.0"
authors = ["LibYML Contributors"]
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.7"
libyml = { path = ".." }

[[bin]]
name = "fuzz_parse"
path = "fuzz_targets/fuzz_parse.rs"
test = false
doc = false

[workspace]
