[package]
name = "libyml-test-suite"
version = "0.0.1"
authors = ["LibYML Contributors"]
edition = "2021"
publish = false

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.93"
quote = "1.0.38"

[build-dependencies]
anyhow = "1.0.95"
flate2 = "1.0.35"
reqwest = { version = "0.12.12", features = ["blocking"] }
tar = "0.4.43"
